# axum-apcore

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: async_tasks.rs  basic.rs  cli_proxy.rs  handler_registration.rs  mcp_server.rs  openapi_scanner.rs
src/: cli.rs  client.rs  config.rs  context.rs  errors.rs  lib.rs
src/engine/: extensions.rs  mod.rs  observability.rs  registry.rs  tasks.rs
src/output/: mod.rs  registry_writer.rs
src/scanner/: mod.rs  native.rs  openapi.rs
tests/: integration_test.rs
