[package]
name = "axum-apcore"
version = "0.1.0"
edition = "2021"
description = "Axum integration for the apcore AI-Perceivable Core ecosystem"
license = "Apache-2.0"
readme = "README.md"
authors = ["aipartnerup <tercel.yi@gmail.com>"]
homepage = "https://aipartnerup.com"
repository = "https://github.com/aipartnerup/axum-apcore"
documentation = "https://github.com/aipartnerup/axum-apcore#readme"
keywords = ["apcore", "axum", "mcp", "ai", "tools"]
categories = [
    "api-bindings",
    "asynchronous",
    "web-programming",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
apcore = "0.13"
apcore-toolkit = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Optional: CLI support
clap = { version = "4", features = ["derive", "env"], optional = true }

# Optional: MCP server support
apcore-mcp = { version = "0.10", optional = true }

# Optional: OpenAPI scanner (via utoipa)
utoipa = { version = "5", optional = true }

[features]
default = []
cli = ["dep:clap"]
mcp = ["dep:apcore-mcp"]
openapi = ["dep:utoipa"]
all = ["cli", "mcp", "openapi"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tracing-subscriber = "0.3"
