[package]
name = "axum-apcore"
version = "0.2.0"
edition = "2021"
description = "Axum integration for the apcore AI-Perceivable Core ecosystem"
license = "Apache-2.0"
readme = "README.md"
authors = ["aiperceivable <tercel.yi@gmail.com>"]
homepage = "https://aiperceivable.com"
repository = "https://github.com/aiperceivable/axum-apcore"
documentation = "https://github.com/aiperceivable/axum-apcore#readme"
keywords = ["apcore", "axum", "mcp", "ai", "tools"]
categories = [
    "api-bindings",
    "asynchronous",
    "web-programming",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
apcore = "0.15"
apcore-toolkit = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Optional: CLI support
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
apcore-cli = { version = "0.5", optional = true }

# Optional: MCP server support
apcore-mcp = { version = "0.12", optional = true }

# Optional: OpenAPI scanner (via utoipa)
utoipa = { version = "5", optional = true }

[features]
default = []
cli = ["dep:clap", "dep:clap_complete", "dep:apcore-cli", "apcore-toolkit/http-proxy"]
mcp = ["dep:apcore-mcp"]
openapi = ["dep:utoipa"]
all = ["cli", "mcp", "openapi"]

[[example]]
name = "openapi_scanner"
required-features = ["openapi"]

[[example]]
name = "mcp_server"
required-features = ["mcp"]

[[example]]
name = "cli_proxy"
required-features = ["cli"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tracing-subscriber = "0.3"
